[package]
name = "loafer"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.15.6", features = ["async"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
uuid = { version = "1.12.1", features = ["v4"] }
